Tue Dec 15 16:24:39 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* lib/monitor.rb: remove @mon_owner. Mutex.owned? is a better way.

Tue Dec 15 16:09:04 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/monitor/test_monitor.rb
	(TestMonitor#test_enter_second_after_killed_thread): remove
	  never reached statement for clarification.

Fri Dec 18 10:24:44 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/irb/ruby-lex.rb: fixed parse error for striped heredocument syntax.
	  [fix GH-1127] Patch by @koic

Fri Dec 18 09:44:47 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/pty/pty.c: fix double words typo.
	  [ci skip][fix GH-1157] Patch by @jwworth

Fri Dec 18 09:42:45 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/nkf/nkf-utf8/utf8tbl.c: fix a typo.
	  [ci skip][fix GH-1159] Patch by @akshay-vishnoi
	* ext/nkf/nkf-utf8/utf8tbl.h: ditto.

Fri Dec 18 07:39:01 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* vm.c (rb_vm_check_redefinition_opt_method): should check the real
	  class instead of the origin iclass.
	  [ruby-core:72188] [Bug #11826]

Thu Dec 17 22:13:10 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_args.c (vm_caller_setup_arg_block): remove code for ifunc
	  because it was made unnecessary by r52138.

Thu Dec 17 16:13:10 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* proc.c (rb_block_arity): should not call GetProcPtr() for symbols.
	  [ruby-core:72205] [Bug #11830]

Thu Dec 17 14:16:29 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_scrub): the result should be infected by the
	  original string.

Thu Dec 17 13:35:27 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* transcode.c (rb_econv_substr_append, econv_primitive_convert):
	  the result should be infected by the original string.

Thu Dec 17 09:46:08 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (reg_names_iter): should consider encoding of regexp.
	  [ruby-core:72185] [Bug #11825]

Thu Dec 17 03:52:10 2015  Koichi Sasada  <ko1@atdot.net>
